--- a/Tensorflow vs Keras.ipynb
+++ b/Tensorflow vs Keras.ipynb
@@ -1,7 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "---\n",
     "<center>\n",
@@ -23,13 +27,14 @@
     "</center\n",
     "\n",
     "---\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "---\n",
     "<center>\n",
@@ -37,6 +42,8 @@
     "\n",
     "# Tensorflow vs Keras\n",
     "<br>\n",
+    "\n",
+    "Tensorflow es una libreria para computación numérica (usando grafos de flujo de datos) creada por Google Brain y que permite principalmente procesar fácilmente matrices o tensores (de 2 dimensiones). Keras, es otro framework para trabajar con redes neuronales pero a más alto nivel, mediante APIs.\n",
     "\n",
     "La principal diferencia entre TensorFlow y Keras es que TensorFlow es una biblioteca de más bajo nivel, mientras que Keras es una biblioteca de más alto nivel. Esto significa que TensorFlow le brinda más control sobre la arquitectura subyacente de su modelo, mientras que Keras proporciona una interfaz más simplificada que es más fácil de usar.\n",
     "\n",
@@ -48,16 +55,34 @@
     "</center\n",
     "\n",
     "---"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "---\n",
+    "<center>\n",
+    "<br><br>\n",
     "\n",
+    "![TFvsKRS](Images/timelineTFKR.png)\n",
+    "\n",
+    "<br><br>\n",
+    "</center\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "---\n",
+    "<center>\n",
     "## Ventajas\n",
     "\n",
     "<br>\n",
@@ -66,16 +91,24 @@
     "|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
     "| La principal ventaja de usar TensorFlow es que le brinda más control sobre la arquitectura subyacente de su modelo. Esto puede ser útil si desea ajustar el rendimiento de su modelo o si desea utilizar un tipo específico de arquitectura. | La principal ventaja de usar Keras es que es más fácil de usar que TensorFlow. Esto se debe a que Keras proporciona una interfaz más simplificada que abstrae parte de la complejidad de TensorFlow.   |\n",
     "\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "![TFvsKRS](Images/comparacionTFKR.png)\n",
+    "\n",
+    "<br><br>\n",
+    "</center\n",
     "\n",
     "---\n",
     "<br>\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "---\n",
     "\n",
@@ -90,10 +123,7 @@
     "<br>\n",
     "\n",
     "---"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
