--- a/Modelo pre-entrenado.ipynb
+++ b/Modelo pre-entrenado.ipynb
@@ -1,15 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "---\n",
+    "<center>\n",
+    "\n",
+    "## Modelo pre-entrenado\n",
+    "\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Realizamos las importaciones necesarias"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "start_time": "2023-05-24T14:39:20.109939Z",
-     "end_time": "2023-05-24T14:39:20.172946Z"
-    }
-   },
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -18,7 +36,19 @@
     "from tensorflow.keras.utils import to_categorical\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Se asigna un nombre a cada etiqueta de clases en el dataset"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -33,6 +63,15 @@
      "start_time": "2023-05-24T14:06:55.466338Z",
      "end_time": "2023-05-24T14:06:55.480340Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Proceso para el entrenamiento"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -165,13 +204,24 @@
   {
    "cell_type": "markdown",
    "source": [
+    "---\n",
+    "\n",
+    "## Anotaciones"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "Se observa que el modelo sin entrenamiento previo obtiene un mejor rendimiento en términos de pérdida (loss) y precisión (accuracy) en comparación con el modelo preentrenado. Esto puede ocurrir por varias razones:\n",
     "\n",
-    "- Diferencia en la arquitectura del modelo: El modelo sin entrenamiento previo utiliza una arquitectura personalizada que puede ser más adecuada para la tarea específica de clasificación de imágenes en el dataset CIFAR-10. El modelo preentrenado VGG16, aunque es muy potente, fue entrenado en un conjunto de datos diferente (ImageNet) y puede no ser óptimo para esta tarea particular.\n",
+    "- **Diferencia en la arquitectura del modelo:** El modelo sin entrenamiento previo utiliza una arquitectura personalizada que puede ser más adecuada para la tarea específica de clasificación de imágenes en el dataset CIFAR-10. El modelo preentrenado VGG16, aunque es muy potente, fue entrenado en un conjunto de datos diferente (ImageNet) y puede no ser óptimo para esta tarea particular.\n",
     "\n",
-    "- Tamaño del conjunto de datos: El dataset CIFAR-10 es relativamente pequeño en comparación con otros conjuntos de datos utilizados para entrenar modelos preentrenados como ImageNet. Esto puede resultar en un sobreajuste (overfitting) más probable cuando se utiliza un modelo preentrenado, ya que el modelo puede haber capturado características demasiado generales durante su entrenamiento inicial.\n",
+    "- **Tamaño del conjunto de datos:** El dataset CIFAR-10 es relativamente pequeño en comparación con otros conjuntos de datos utilizados para entrenar modelos preentrenados como ImageNet. Esto puede resultar en un sobreajuste (overfitting) más probable cuando se utiliza un modelo preentrenado, ya que el modelo puede haber capturado características demasiado generales durante su entrenamiento inicial.\n",
     "\n",
-    "- Capacidad de adaptación del modelo sin entrenamiento previo: Al entrenar un modelo desde cero, tienes la libertad de ajustar la arquitectura y los hiperparámetros específicamente para la tarea y el conjunto de datos en cuestión. Esto permite una adaptación más precisa y puede conducir a un mejor rendimiento en comparación con un modelo preentrenado más general.\n",
+    "- **Capacidad de adaptación del modelo sin entrenamiento previo:** Al entrenar un modelo desde cero, tienes la libertad de ajustar la arquitectura y los hiperparámetros específicamente para la tarea y el conjunto de datos en cuestión. Esto permite una adaptación más precisa y puede conducir a un mejor rendimiento en comparación con un modelo preentrenado más general.\n",
     "\n",
     "Es importante tener en cuenta que los resultados pueden variar dependiendo de los conjuntos de datos y las tareas específicas. En algunos casos, un modelo preentrenado puede proporcionar un mejor rendimiento al aprovechar características aprendidas en conjuntos de datos más grandes y diversos. Sin embargo, en este caso particular, el modelo sin entrenamiento previo mostró un mejor rendimiento."
    ],
@@ -201,6 +251,15 @@
     "| `loss, accuracy = model.evaluate(x_test, y_test)`                                             | `loss, accuracy = model.evaluate(x_test, y_test)`                             | Evaluar el modelo en el conjunto de prueba                                   |\n",
     "| `print(f'Loss: {loss}, Accuracy: {accuracy}')`                                                | `print(f'Loss: {loss}, Accuracy: {accuracy}')`                               | Imprimir la pérdida y la precisión del modelo                                |"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
